libs/modkit-canonical-errors/tests/ui/missing_reason_on_unauthenticated.stderr
error[E0599]: the method `create` exists for struct `ResourceErrorBuilder<modkit_canonical_errors::builder::ResourceAbsent, modkit_canonical_errors::builder::NeedsReason>`, but its trait bounds were not satisfied
 --> tests/ui/missing_reason_on_unauthenticated.rs:7:50
  |
7 |     let _err = CanonicalError::unauthenticated().create();
  |                                                  ^^^^^^ method cannot be called due to unsatisfied trait bounds
  |
 ::: src/builder.rs
  |
  | pub struct NeedsReason;
  | ---------------------- doesn't satisfy `_: ContextResolved`
  |
  = note: the following trait bounds were not satisfied:
          `modkit_canonical_errors::builder::NeedsReason: modkit_canonical_errors::builder::ContextResolved`
